2003-12-12  Neil Booth  <neil@daikokuya.co.uk>

	PR preprocessor/12935 preprocessor/12952 preprocessor/13046
	* cpplib.c (prepare_directive_trad): Clear skipping only in
	#if and #elif directives.
	(do_undef): Call the handler even if the identifier is not a macro.
	* cpptrad.c (scan_parameters): Emit an error message.
	(_cpp_create_trad_definition): Remember the params list even on
	failure.

2003-12-11  Zack Weinberg  <zack@codesourcery.com>

	* arm.c (ARM_ADDRESS_COST, THUMB_ADDRESS_COST): Convert macros
	to inline functions: arm_arm_address_cost, arm_thumb_address_cost
	respectively.
	(arm_address_cost): Use 'em.

2003-12-12  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* config/alpha/osf.h (TARGET_OS_CPP_BUILTINS): Define
	__STDC_VERSION__ to ISO C94 for C++.

	* fixinc/inclhack.def (alpha_wchar): New fix.
	* fixinc/fixincl.x: Regenerate.
	* fixinc/tests/base/wchar.h: New file.

2003-12-11  David Mosberger  <davidm@hpl.hp.com>

	* unwind-libunwind.c (_Unwind_SetGR): Clear the NaT bit as
	required by C++ ABI for Itanium.
	* config/t-libunwind (LIB2ADDEH): Remove unwind-libunwind.c.
	* config/t-libunwind-no-eh: New file.
	* configure.in: Check libunwind for _Unwind_Resume() and if it's
	present, set libunwind_has_eh_support to "yes".
	* configure: Regenerate.
	* config.gcc (ia64*-*-linux*): If $libunwind_has_eh_support is
	set to yes, use t-libunwind, otherwise, use t-libunwind-no-eh.

2003-12-11  Richard Sandiford  <rsandifo@redhat.com>

	* config/mips/mips.c (mips_global_pointer): Force functions with
	a nonlocal goto to set up $gp.

2003-12-11  James E Wilson  <wilson@specifixinc.com>

	PR target/13132
	* function.c (gen_mem_addressof): When no decl, explicitly clear flag
	bits.

2003-12-12  Nick Clifton  <nickc@redhat.com>

	* config/m32r/m32r.c: Convert to ISO-C

2003-12-12  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* doc/invoke.texi: Replace Mitsubishi with Renesas.
	* config/m32r/m32r.h: Ditto.
	* config/m32r/m32r.c: Ditto.